# delta_neutral_lp

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  BACKLOG.md  CLAUDE.md  DEPLOY_QUICKSTART.md  Dockerfile  FIX_LP_OWNER_ERROR.md  HANDOVER.md  INTEGRATION_SUMMARY.md  JITO_PRIORITY_IMPLEMENTED.md  MANUAL_MODE_GUIDE.md  PROFITABILITY_ANALYSIS.md  PROFITABILITY_QUICK_REFERENCE.md  README.md  README_UI.md  SECURITY_CHECKLIST.md  SMOKE_TESTS.md  UI_COMPONENTS.md  UI_FIXED_SETUP.md  UI_QUICKSTART.md  UI_README.md  UI_SUMMARY.md  agent-kit-mvp-prd.md  bin-count-simulator.html  bugs.md  decisions.md  diagnose-api.sh  docker-compose.yml  epics.md  package.json  pnpm-lock.yaml  progress.md  start-ui.sh  strategy-diagram.html  test-ui-setup.sh  tsconfig.json
.codex/: config.toml
docs/: ANDROID_POOL_ANALYSIS.md  ANDROID_SUMMARY.md  API.md  API_CHANGES_SUMMARY.md  CODE_SNIPPETS_ANALYSIS.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_SUMMARY.md  DOCKER_GUIDE.md  DOCUMENTATION_GUIDE.md  ERROR_ANALYSIS.md  FEE_OPTIMIZATION.md  FINAL_FIX_APPLIED.md  GCP_PULUMI_DEPLOYMENT.md  LOGGING_OPTIMIZATION.md  MULTI_POOL_IMPLEMENTATION.md  POSITION_TRACKING_FIX.md  PRIORITY_FEES_GUIDE.md  QUICK_FIX_GUIDE.md  QUICK_FIX_SUMMARY.md  RENT_RECLAMATION_GUIDE.md  SCRIPTS_REFERENCE.md  SESSION_8_SUMMARY.md  TIERED_PROCEDURAL_RUNBOOK.md  TRANSACTION_FEE_TRACKING.md  (+4 more)
scripts/: triage.sh  (+17 more)
simulator/: Cargo.toml
simulator/fixtures/: hedge-vectors.jsonl
simulator/src/: bins.rs  data.rs  hedge.rs  lib.rs  main.rs  path.rs  position.rs  strategy.rs
simulator/tests/: golden.rs  vectors.rs
(+116 files in other folders)
