[package]
name = "dlmm-simulator"
version = "0.1.0"
edition = "2021"
description = "Backtesting simulator for the delta-neutral Meteora DLMM + Jupiter Perps bot (stage 1: bin math, fees, IL)"
license = "MIT"

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
